Refine ASM Constants dynamic access coverage test